if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
  cmake_minimum_required(VERSION 3.22)
  project(ArborXExamples CXX)
  find_package(ArborX 1.7.99 REQUIRED)
  enable_testing()
endif()

add_subdirectory(access_traits)
add_subdirectory(brute_force)
add_subdirectory(callback)
add_subdirectory(custom_distance)
add_subdirectory(dbscan)
add_subdirectory(emst)
add_subdirectory(molecular_dynamics)
add_subdirectory(simple_intersection)
add_subdirectory(triangle_intersection)

if(ARBORX_ENABLE_MPI)
  add_subdirectory(distributed_tree)
endif()

find_package(Boost COMPONENTS program_options)
if(Boost_FOUND)
  add_subdirectory(viz)
  add_subdirectory(raytracing)
  add_subdirectory(moving_least_squares)
endif()
